2008-05-08 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-common.c:
	* src/mt-common.h:
	Add more dialog types.
	
	* src/pointer-capture-applet.c:
	* src/dwell-click-applet.c:
	Switch to new dialog function.

	* src/mt-main.c:
	Improve the Assistive Technology warning dialog and add an
	'Enable and Log Out' button, similar to GOK. (Bug #531693)

2008-04-21 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.23.2

2008-04-21 Gerd Kohlberger <gerdk@svn.gnome.org>

	* NEWS: Prepare 2.23.1 release and remove pre-GNOME news.
	* po/ChangeLog: Add some missing entries.

2008-04-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c/h: Add simple line drawing for gesture mode.

2008-04-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:
	* src/mt-cusor-manager.c:
	Handle cursor theme changes correctly.

2008-04-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-timer.c: Remove unused variables.
	* src/mt-main.c: Don't send right-clicks too fast. This helps
	to avoid running into active pointer grabs. (eg. gnome-panel)

2008-03-30 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/Makefile.am: LDFLAGS -> LDADD.
	Make sure "-Wl,--as-needed" gets a front row seat. Fixes bug #525032.

2008-03-29 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Use new 'show-page' option of mouse capplet.

2008-03-29 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-cusor.c/h: Initial commit.
	* src/mt-cusor-manager.c/h: Initial commit.
	* src/Makefile.am: Add new cursor files.
	* src/mt-main.c/h: Use new objects. Add cursor drawing code.
	* src/mt-common.h: New animate_cursor option.
	* data/mousetwaks.schemas.in: New animate_cursor option.

	Add cursor animation to give visual feedback for the internal
	state of the timers. For dwell-click this means - how long the 
	cursor has been motionless, for secondary clicks - how long the
	primary button has been pressed.
	
2008-03-28 Gerd Kohlberger <gerdk@svn.gnome.org>
