@@ -1,3 +1,10 @@
+2008-05-12 Gerd Kohlberger <gerdk@svn.gnome.org>
+
+	* src/mt-main.c:
+	Initialize GnomeProgram in child process.
+	Add more info to the a11y warning dialog.
+	Plug minor options leak.
+
 2008-05-08 Gerd Kohlberger <gerdk@svn.gnome.org>
 	* src/mt-common.c:
 	* src/mt-common.h:
